egida/pkg/parser/aspida_parser.go
// Code generated from Aspida.g4 by ANTLR 4.8. DO NOT EDIT.

package parser // Aspida
import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "':'", "'{'", "'}'", "'name'", "'NAME'", "'connection'", "'CONNECTION'",
	"'description'", "'DESCRIPTION'", "'sections'", "'SECTIONS'", "'points'",
	"'POINTS'", "'controls'", "'CONTROLS'", "'exclusions'", "'EXCLUSIONS'",
	"'tags'", "'TAGS'", "'<'", "'>'", "'=='", "'>='", "'<='", "'!='", "'true'",
	"'false'", "'null'", "'['", "','", "']'", "", "", "", "", "", "';'", "'MAIN'",
	"'HOST'", "'TASKS'", "'VARS'", "", "", "'IF'", "'ELIF'", "'ELSE'", "'OR'",
	"'AND'", "'NOT'", "'IS'",
}
var symbolicNames = []string{
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "COMMENT", "WHITESPACE",
	"NEWLINE", "STRING", "NUMBER", "NS", "MAIN_KW", "HOSTS_KW", "TASKS_KW",
	"VARS_KW", "LOCAL_KW", "SSH_KW", "IF", "ELIF", "ELSE", "OR", "AND", "NOT",
	"IS",
}

var ruleNames = []string{
	"program", "main", "hosts", "tasks", "variables", "main_content", "main_prop",
	"name", "connection", "connection_type", "description", "tasks_content",
	"tasks_prop", "sections", "points", "controls", "exclusions", "tags", "ifStat",
	"elifStat", "elseStat", "comparison", "vars_content", "vars_prop", "comp_op",
	"value", "str_array", "array",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type AspidaParser struct {
	*antlr.BaseParser
}

func NewAspidaParser(input antlr.TokenStream) *AspidaParser {
	this := new(AspidaParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "Aspida.g4"

	return this
}

// AspidaParser tokens.
const (
	AspidaParserEOF        = antlr.TokenEOF
	AspidaParserT__0       = 1
	AspidaParserT__1       = 2
	AspidaParserT__2       = 3
	AspidaParserT__3       = 4
	AspidaParserT__4       = 5
	AspidaParserT__5       = 6
	AspidaParserT__6       = 7
	AspidaParserT__7       = 8
	AspidaParserT__8       = 9
	AspidaParserT__9       = 10
	AspidaParserT__10      = 11
	AspidaParserT__11      = 12
	AspidaParserT__12      = 13
	AspidaParserT__13      = 14
	AspidaParserT__14      = 15
	AspidaParserT__15      = 16
	AspidaParserT__16      = 17
	AspidaParserT__17      = 18
	AspidaParserT__18      = 19
	AspidaParserT__19      = 20
	AspidaParserT__20      = 21
	AspidaParserT__21      = 22
	AspidaParserT__22      = 23
	AspidaParserT__23      = 24
	AspidaParserT__24      = 25
	AspidaParserT__25      = 26
	AspidaParserT__26      = 27
	AspidaParserT__27      = 28
	AspidaParserT__28      = 29
	AspidaParserT__29      = 30
	AspidaParserT__30      = 31
	AspidaParserCOMMENT    = 32
	AspidaParserWHITESPACE = 33
	AspidaParserNEWLINE    = 34
	AspidaParserSTRING     = 35
	AspidaParserNUMBER     = 36
	AspidaParserNS         = 37
	AspidaParserMAIN_KW    = 38
	AspidaParserHOSTS_KW   = 39
	AspidaParserTASKS_KW   = 40
	AspidaParserVARS_KW    = 41
	AspidaParserLOCAL_KW   = 42
	AspidaParserSSH_KW     = 43
	AspidaParserIF         = 44
	AspidaParserELIF       = 45
	AspidaParserELSE       = 46
	AspidaParserOR         = 47
	AspidaParserAND        = 48
	AspidaParserNOT        = 49
	AspidaParserIS         = 50
)

// AspidaParser rules.
const (
	AspidaParserRULE_program         = 0
	AspidaParserRULE_main            = 1
	AspidaParserRULE_hosts           = 2
	AspidaParserRULE_tasks           = 3
	AspidaParserRULE_variables       = 4
	AspidaParserRULE_main_content    = 5
	AspidaParserRULE_main_prop       = 6
	AspidaParserRULE_name            = 7
	AspidaParserRULE_connection      = 8
	AspidaParserRULE_connection_type = 9
	AspidaParserRULE_description     = 10
	AspidaParserRULE_tasks_content   = 11
	AspidaParserRULE_tasks_prop      = 12
	AspidaParserRULE_sections        = 13
	AspidaParserRULE_points          = 14
	AspidaParserRULE_controls        = 15
	AspidaParserRULE_exclusions      = 16
	AspidaParserRULE_tags            = 17
	AspidaParserRULE_ifStat          = 18
	AspidaParserRULE_elifStat        = 19
	AspidaParserRULE_elseStat        = 20
	AspidaParserRULE_comparison      = 21
	AspidaParserRULE_vars_content    = 22
	AspidaParserRULE_vars_prop       = 23
	AspidaParserRULE_comp_op         = 24
	AspidaParserRULE_value           = 25
	AspidaParserRULE_str_array       = 26
	AspidaParserRULE_array           = 27
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = AspidaParserRULE_program
	return p
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = AspidaParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) Main() IMainContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IMainContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IMainContext)
}

func (s *ProgramContext) Hosts() IHostsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IHostsContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IHostsContext)
}

func (s *ProgramContext) Tasks() ITasksContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITasksContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITasksContext)
}

func (s *ProgramContext) Variables() IVariablesContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IVariablesContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IVariablesContext)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AspidaListener); ok {
		listenerT.EnterProgram(s)
	}
}

func (s *ProgramContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AspidaListener); ok {
		listenerT.ExitProgram(s)
	}
}

func (s *ProgramContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case AspidaVisitor:
		return t.VisitProgram(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *AspidaParser) Program() (localctx IProgramContext) {
	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, AspidaParserRULE_program)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(56)
		p.Main()
	}
	{
		p.SetState(57)
		p.Hosts()
	}
	{
		p.SetState(58)
		p.Tasks()
	}
	p.SetState(60)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == AspidaParserVARS_KW {
		{
			p.SetState(59)
			p.Variables()
		}

	}

	return localctx
}

// IMainContext is an interface to support dynamic dispatch.
type IMainContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsMainContext differentiates from other interfaces.
	IsMainContext()
}

type MainContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMainContext() *MainContext {
	var p = new(MainContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = AspidaParserRULE_main
	return p
}

func (*MainContext) IsMainContext() {}

func NewMainContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MainContext {
	var p = new(MainContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = AspidaParserRULE_main

	return p
}

func (s *MainContext) GetParser() antlr.Parser { return s.parser }

func (s *MainContext) MAIN_KW() antlr.TerminalNode {
	return s.GetToken(AspidaParserMAIN_KW, 0)
}

func (s *MainContext) Main_content() IMain_contentContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IMain_contentContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IMain_contentContext)
}

func (s *MainContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MainContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *MainContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AspidaListener); ok {
		listenerT.EnterMain(s)
	}
}

func (s *MainContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AspidaListener); ok {
		listenerT.ExitMain(s)
	}
}

func (s *MainContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case AspidaVisitor:
		return t.VisitMain(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *AspidaParser) Main() (localctx IMainContext) {
	localctx = NewMainContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, AspidaParserRULE_main)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(62)
		p.Match(AspidaParserMAIN_KW)
	}
	{
		p.SetState(63)
		p.Match(AspidaParserT__0)
	}
	{
		p.SetState(64)
		p.Match(AspidaParserT__1)
	}
	{
		p.SetState(65)
		p.Main_content()
	}
	{
		p.SetState(66)
		p.Match(AspidaParserT__2)
	}

	return localctx
}

// IHostsContext is an interface to support dynamic dispatch.
type IHostsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsHostsContext differentiates from other interfaces.
	IsHostsContext()
}

type HostsContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyHostsContext() *HostsContext {
	var p = new(HostsContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = AspidaParserRULE_hosts
	return p
}

func (*HostsContext) IsHostsContext() {}

func NewHostsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *HostsContext {
	var p = new(HostsContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = AspidaParserRULE_hosts

	return p
}

func (s *HostsContext) GetParser() antlr.Parser { return s.parser }

func (s *HostsContext) HOSTS_KW() antlr.TerminalNode {
	return s.GetToken(AspidaParserHOSTS_KW, 0)
}

func (s *HostsContext) STRING() antlr.TerminalNode {
	return s.GetToken(AspidaParserSTRING, 0)
}

func (s *HostsContext) NS() antlr.TerminalNode {
	return s.GetToken(AspidaParserNS, 0)
}

func (s *HostsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *HostsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *HostsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AspidaListener); ok {
		listenerT.EnterHosts(s)
	}
}

func (s *HostsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AspidaListener); ok {
		listenerT.ExitHosts(s)
	}
}

func (s *HostsContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case AspidaVisitor:
		return t.VisitHosts(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *AspidaParser) Hosts() (localctx IHostsContext) {
	localctx = NewHostsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, AspidaParserRULE_hosts)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(68)
		p.Match(AspidaParserHOSTS_KW)
	}
	{
		p.SetState(69)
		p.Match(AspidaParserT__0)
	}
	{
		p.SetState(70)
		p.Match(AspidaParserSTRING)
	}
	{
		p.SetState(71)
		p.Match(AspidaParserNS)
	}

	return localctx
}

// ITasksContext is an interface to support dynamic dispatch.
type ITasksContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsTasksContext differentiates from other interfaces.
	IsTasksContext()
}

type TasksContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTasksContext() *TasksContext {
	var p = new(TasksContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = AspidaParserRULE_tasks
	return p
}

func (*TasksContext) IsTasksContext() {}

func NewTasksContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TasksContext {
	var p = new(TasksContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = AspidaParserRULE_tasks

	return p
}

func (s *TasksContext) GetParser() antlr.Parser { return s.parser }

func (s *TasksContext) TASKS_KW() antlr.TerminalNode {
	return s.GetToken(AspidaParserTASKS_KW, 0)
}

func (s *TasksContext) Tasks_content() ITasks_contentContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITasks_contentContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITasks_contentContext)
}

func (s *TasksContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TasksContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TasksContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AspidaListener); ok {
		listenerT.EnterTasks(s)
	}
}

func (s *TasksContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AspidaListener); ok {
		listenerT.ExitTasks(s)
	}
}

func (s *TasksContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case AspidaVisitor:
		return t.VisitTasks(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *AspidaParser) Tasks() (localctx ITasksContext) {
	localctx = NewTasksContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, AspidaParserRULE_tasks)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(73)
		p.Match(AspidaParserTASKS_KW)
	}
	{
		p.SetState(74)
		p.Match(AspidaParserT__0)
	}
	{
		p.SetState(75)
		p.Match(AspidaParserT__1)
	}
	{
		p.SetState(76)
		p.Tasks_content()
	}
	{
		p.SetState(77)
		p.Match(AspidaParserT__2)
	}

	return localctx
}

// IVariablesContext is an interface to support dynamic dispatch.
type IVariablesContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsVariablesContext differentiates from other interfaces.
	IsVariablesContext()
}

type VariablesContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyVariablesContext() *VariablesContext {
	var p = new(VariablesContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = AspidaParserRULE_variables
	return p
}

func (*VariablesContext) IsVariablesContext() {}

func NewVariablesContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *VariablesContext {
	var p = new(VariablesContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = AspidaParserRULE_variables

	return p
}

func (s *VariablesContext) GetParser() antlr.Parser { return s.parser }

func (s *VariablesContext) VARS_KW() antlr.TerminalNode {
	return s.GetToken(AspidaParserVARS_KW, 0)
}

func (s *VariablesContext) Vars_content() IVars_contentContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IVars_contentContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IVars_contentContext)
}

func (s *VariablesContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *VariablesContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *VariablesContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AspidaListener); ok {
		listenerT.EnterVariables(s)
	}
}

func (s *VariablesContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AspidaListener); ok {
		listenerT.ExitVariables(s)
	}
}

func (s *VariablesContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case AspidaVisitor:
		return t.VisitVariables(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *AspidaParser) Variables() (localctx IVariablesContext) {
	localctx = NewVariablesContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, AspidaParserRULE_variables)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(79)
		p.Match(AspidaParserVARS_KW)
	}
	{
		p.SetState(80)
		p.Match(AspidaParserT__0)
	}
	{
		p.SetState(81)
		p.Match(AspidaParserT__1)
	}
	{
		p.SetState(82)
		p.Vars_content()
	}
	{
		p.SetState(83)
		p.Match(AspidaParserT__2)
	}

	return localctx
}

// IMain_contentContext is an interface to support dynamic dispatch.
type IMain_contentContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsMain_contentContext differentiates from other interfaces.
	IsMain_contentContext()
}

type Main_contentContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMain_contentContext() *Main_contentContext {
	var p = new(Main_contentContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = AspidaParserRULE_main_content
	return p
}

func (*Main_contentContext) IsMain_contentContext() {}

func NewMain_contentContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Main_contentContext {
	var p = new(Main_contentContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = AspidaParserRULE_main_content

	return p
}

func (s *Main_contentContext) GetParser() antlr.Parser { return s.parser }

func (s *Main_contentContext) AllMain_prop() []IMain_propContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IMain_propContext)(nil)).Elem())
	var tst = make([]IMain_propContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IMain_propContext)
		}
	}

	return tst
}

func (s *Main_contentContext) Main_prop(i int) IMain_propContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IMain_propContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IMain_propContext)
}

func (s *Main_contentContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Main_contentContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Main_contentContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AspidaListener); ok {
		listenerT.EnterMain_content(s)
	}
}

func (s *Main_contentContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AspidaListener); ok {
		listenerT.ExitMain_content(s)
	}
}

func (s *Main_contentContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case AspidaVisitor:
		return t.VisitMain_content(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *AspidaParser) Main_content() (localctx IMain_contentContext) {
	localctx = NewMain_contentContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, AspidaParserRULE_main_content)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(85)
		p.Main_prop()
	}
	p.SetState(89)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<AspidaParserT__3)|(1<<AspidaParserT__4)|(1<<AspidaParserT__5)|(1<<AspidaParserT__6)|(1<<AspidaParserT__7)|(1<<AspidaParserT__8))) != 0 {
		{
			p.SetState(86)
			p.Main_prop()
		}

		p.SetState(91)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IMain_propContext is an interface to support dynamic dispatch.
type IMain_propContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsMain_propContext differentiates from other interfaces.
	IsMain_propContext()
}

type Main_propContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMain_propContext() *Main_propContext {
	var p = new(Main_propContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = AspidaParserRULE_main_prop
	return p
}

func (*Main_propContext) IsMain_propContext() {}

func NewMain_propContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Main_propContext {
	var p = new(Main_propContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = AspidaParserRULE_main_prop

	return p
}

func (s *Main_propContext) GetParser() antlr.Parser { return s.parser }

func (s *Main_propContext) CopyFrom(ctx *Main_propContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *Main_propContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Main_propContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type NameMainContext struct {
	*Main_propContext
}

func NewNameMainContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *NameMainContext {
	var p = new(NameMainContext)

	p.Main_propContext = NewEmptyMain_propContext()
	p.parser = parser
	p.CopyFrom(ctx.(*Main_propContext))

	return p
}

func (s *NameMainContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *NameMainContext) Name() INameContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*INameContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(INameContext)
}

func (s *NameMainContext) NS() antlr.TerminalNode {
	return s.GetToken(AspidaParserNS, 0)
}

func (s *NameMainContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AspidaListener); ok {
		listenerT.EnterNameMain(s)
	}
}

func (s *NameMainContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AspidaListener); ok {
		listenerT.ExitNameMain(s)
	}
}

func (s *NameMainContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case AspidaVisitor:
		return t.VisitNameMain(s)

	default:
		return t.VisitChildren(s)
	}
}

type ConnectionMainContext struct {
	*Main_propContext
}

func NewConnectionMainContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *ConnectionMainContext {
	var p = new(ConnectionMainContext)

	p.Main_propContext = NewEmptyMain_propContext()
	p.parser = parser
	p.CopyFrom(ctx.(*Main_propContext))

	return p
}

func (s *ConnectionMainContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ConnectionMainContext) Connection() IConnectionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IConnectionContext)(nil)).Elem(), 0)
